--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </nav>
                 <div class="logo">
                     <a href="" class="logo__link">
-                        <img src="/assets/images/logo/Logo.png" alt="" class="logo__link-image">
+                        <img src="/assets/images/logo/Logo.png" alt="logo-image" class="logo__link-image">
                     </a>
                 </div>
                 <div class="personal">
@@ -35,14 +35,13 @@
                         <li><a href=""><img src="/assets/images/personal/User-icon.png" alt="personal-icon"></a></li>
                         <li><a href="">
                             <img src="/assets//images/personal/Cart-icon.png" alt="Cart-icon">
-                            <span class="cart-icon__number">1</span>
                         </a></li>
 
                     </ul>
                 </div>
                 <span class="line"></span>
                 <div class="social">
-                    <ul>
+                    <ul class="social__list">
                         <li><a href=""><img src="/assets/images/social/Instagram-icon.png" alt="Instagram-icon"></a></li>
                         <li><a href=""><img src="/assets/images/social/Pinterest-icon.png" alt="Pinterest-icon"></a></li>
                         <li><a href=""><img src="/assets/images/social/Facebook-icon.png" alt="Facebook-icon"></a></li>
@@ -55,50 +54,50 @@
         </div>
     </header>
     <section>
-        <h1 class="WhatAreTheSmoothies">What are these smoothies</h1>
-        <article class="WhatAreTheSmoothies__decription">
+        <h1 class="smoothies__title">What are these smoothies</h1>
+        <article class="smoothies__decription">
             A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements. 
         </article>
         <div class="features">
-            <div class="features__items">
+            <figure class="features__items">
                 <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon1.png" alt="">
+                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon1.png" alt="Plant Based">
                     <p class="features__item-text">Plant Based</p>
                 </div>
                 <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon2.png" alt="">
+                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon2.png" alt="Vegan">
                     <p class="features__item-text">Vegan</p>
                 </div>
                 <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon3.png" alt="">
+                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon3.png" alt="Palleo">
                     <p class="features__item-text">Palleo</p>
                 </div>
                 <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon4.png" alt="">
+                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon4.png" alt="Gluten-Free">
                     <p class="features__item-text">Gluten-Free</p>
                 </div>
                 <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon5.png" alt="">
+                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon5.png" alt="Corn-Free">
                     <p class="features__item-text">Corn-Free</p>
                 </div>
                 <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon6.png" alt="">
+                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon6.png" alt="Soy-Free">
                     <p class="features__item-text">Soy-Free</p>
                 </div>
                 <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon7.png" alt="">
+                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon7.png" alt="Ayurvedic">
                     <p class="features__item-text">Ayurvedic</p>
                 </div>
                 <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon8.png" alt="">
+                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/Icon8.png" alt="Made With Love">
                     <p class="features__item-text">Made With Love</p>
                 </div>
-            </div>
+            </figure>
         </div>
     </section>
     <section class="about">
          <div class="about__image">
-             <img src="/assets/images/About/Img.png" alt="Smoothie">
+             <img class="about__image-item" src="/assets/images/About/Img.png" alt="Smoothie">
          </div>
          <div class="about__description">
             <h2 class="about__title">What makes Smoothie an awesome drink? </h2>
@@ -118,39 +117,39 @@
          </div>   
     </section>
     <section class="products">
-        <div class="products__items">
+        <figure class="products__items">
             <div class="products__item">
-                <img src="/assets/images/products/Img1.png" alt="botle" class="products__item-image">
+                <img src="/assets/images/products/Img1.jpg" alt="Dark Chocolate Smoothie" class="products__item-image">
                 <div class="products__item-title">Dark Chocolate Smoothie</div>
                 <div class="products__item-mesure">100 ml</div>
                 <button class="products__item-button">Buy</button>
             </div>
             <div class="products__item">
-                <img src="/assets/images/products/Img2.png" alt="botle" class="products__item-image">
+                <img src="/assets/images/products/Img2.jpg" alt="Vegan Lettuce Smoothie" class="products__item-image">
                 <div class="products__item-title">Vegan Lettuce Smoothie</div>
                 <div class="products__item-mesure">100 ml</div>
                 <button class="products__item-button">Buy</button>
             </div>
             <div class="products__item">
-                <img src="/assets/images/products/Img3.png" alt="botle" class="products__item-image">
+                <img src="/assets/images/products/Img3.jpg" alt="Lemon Ginger Smoothie" class="products__item-image">
                 <div class="products__item-title">Lemon Ginger Smoothie</div>
                 <div class="products__item-mesure">100 ml</div>
                 <button class="products__item-button">Buy</button>
             </div>
             <div class="products__item">
-                <img src="/assets/images/products/Img4.png" alt="botle" class="products__item-image">
+                <img src="/assets/images/products/Img4.jpg" alt="Lemon Ginger Smoothie" class="products__item-image">
                 <div class="products__item-title">Turmeric Garlic Smoothie</div>
                 <div class="products__item-mesure">100 ml</div>
                 <button class="products__item-button">Buy</button>
             </div>
-        </div>
+        </figure>
     </section>
     <section class="story">
-        <div class="story__description">
+        <article class="story__description">
             <h2 class="story__description-title">Our story</h2>
-            <article class="story__description-article">As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake. </article>
+            <p class="story__description-article">As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake. </p>
             <a href="" class="story__description-button">Who we are</a>
-        </div>
+        </article>
         <div class="story__images">
             <img src="/assets/images/Story/Img.jpg" alt="Our ingredients">
             <img src="/assets/images/Story/Dots.png" alt="Our ingredients">
@@ -172,20 +171,20 @@
         <h2 class="blog__title">Our blog</h2>
         <div class="blog__inner">
             <img src="/assets/images/blog/Img.jpg" alt="" class="blog__image">
-            <div class="blog__description">
+            <article class="blog__description">
                 <h3 class="blog__description-title">ASAFOETIDA - THE NEXT TURMERIC?</h3>
                 <p>Jun 16, 2020</p>
-                <article>
+                <p>
                     If the fruit ingredients and the green vegetable ingredients are both juiced ahead of time, the mixed juice doesn't even have to be blended like a smoothie, i.e. a green juice or anything... <span>Read More</span>
-                </article>
-            </div>
+                </p>
+            </article>
         </div>
     </section>
     <section class="instagram">
-        <div class="instagram__user">
+        <h5 class="instagram__user">
             <a href="" class="instagram__user-link">ashasuperfoods</a>
-        </div>
-        <div class="instagram__image-items">
+        </h5>
+        <figure class="instagram__image-items">
             <div class="instagram__image-item">
                 <img src="/assets/images/Instagram/Img1.jpg" alt="instagram__image" class="instagram__image">
                 <img src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" class="instagram__image-icon">
@@ -202,13 +201,13 @@
                 <img src="/assets/images/Instagram/Img4.jpg" alt="instagram__image" class="instagram__image">
                 <img src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" class="instagram__image-icon">
             </div>
-        </div>
+        </figure>
     </section>
     <footer>
         <div class="footer-top">
             <div class="logo">
                 <a href="" class="logo__link">
-                    <img src="" alt="" class="logo__link-image">
+                    <img src="/assets/images/logo/Logo.png" alt="logo-image" class="logo__link-image">
                 </a>
             </div>
             <nav class="information">
@@ -273,7 +272,7 @@
 
             </div>
         </div>
-        <div class="footer-botton">
+        <div class="footer__botton">
             <p>©  2020. span All Rights Reserved.</p>
             <div class="go-top">
                 <a href="" class="go-top__link"></a>
