--- a/index.html
+++ b/index.html
@@ -4,52 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/index.css">
     <!-- Сюда подключаем стили -->
     <title>Smoothie-project</title>
 </head>
 
 <body>
     <!-- Здесь будет структура документа -->
-    <header>
+    <header class="header">
         <div class="conteiner">
-            <div class="header-top">
-                <nav>
-                    <ul class="header-top__list">
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">SHOP</a></li>
-                        <li><a href="">STORY</a></li>
-                        <li><a href="">ABOUT</a></li>
-                        <li><a href="">BLOG</a></li>
-                        <li><a href="">TESTIMONIALS</a></li>
+            <div class="header__top">
+                <nav class="header__nav menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item"><a class="menu__list-link" href="">HOME</a></li>
+                        <li class="menu__list-item"><a class="menu__list-link" href="">SHOP</a></li>
+                        <li class="menu__list-item"><a class="menu__list-link" href="">STORY</a></li>
+                        <li class="menu__list-item"><a class="menu__list-link" href="">ABOUT</a></li>
+                        <li class="menu__list-item"><a class="menu__list-link" href="">BLOG</a></li>
+                        <li class="menu__list-item"><a class="menu__list-link" href="">TESTIMONIALS</a></li>
                     </ul>
                 </nav>
                 <div class="logo">
                     <a href="" class="logo__link">
-                        <img src="/assets/images/logo/Logo.png" alt="logo-image" class="logo__link-image">
+                        <img class="logo__img" src="/assets/images/logo/Logo.png" alt="logo-image">
                     </a>
                 </div>
                 <div class="personal">
                     <ul class="personal__list">
-                        <li><a href=""><img src="/assets/images/personal/Search-icon.png" alt="personal-icon"></a></li>
-                        <li><a href=""><img src="/assets/images/personal/User-icon.png" alt="personal-icon"></a></li>
-                        <li><a href="">
-                            <img src="/assets//images/personal/Cart-icon.png" alt="Cart-icon">
-                        </a></li>
-
+                        <li class="personal__list-item"><a class="personal__list-link" href=""><img src="/assets/images/personal/Search-icon.png" alt="Search-icon"></a></li>
+                        <li class="personal__list-item"><a class="personal__list-link" href=""><img src="/assets/images/personal/User-icon.png" alt="User-icon"></a></li>
+                        <li class="personal__list-item"><a class="personal__list-link" href=""> <img src="/assets//images/personal/Cart-icon.png" alt="Cart-icon"></a></li>
                     </ul>
                 </div>
-                <span class="line"></span>
                 <div class="social">
                     <ul class="social__list">
-                        <li><a href=""><img src="/assets/images/social/Instagram-icon.png" alt="Instagram-icon"></a></li>
-                        <li><a href=""><img src="/assets/images/social/Pinterest-icon.png" alt="Pinterest-icon"></a></li>
-                        <li><a href=""><img src="/assets/images/social/Facebook-icon.png" alt="Facebook-icon"></a></li>
+                        <li class="social__list-item"><a class="social__list-link" href=""><img src="/assets/images/social/Instagram-icon.png" alt="Instagram-icon"></a></li>
+                        <li class="social__list-item"><a class="social__list-link" href=""><img src="/assets/images/social/Pinterest-icon.png" alt="Pinterest-icon"></a></li>
+                        <li class="social__list-item"><a class="social__list-link" href=""><img src="/assets/images/social/Facebook-icon.png" alt="Facebook-icon"></a></li>
                     </ul>
                 </div>
             </div>
-            <div class="header-content">
-                <button>Shop Now</button>
+            <div class="header__content">
+                <button class="header__btn btn">Shop Now</button>
             </div>
         </div>
     </header>
@@ -102,8 +99,7 @@
          <div class="about__description">
             <h2 class="about__title">What makes Smoothie an awesome drink? </h2>
             <ul class="about__list">
-                <li class="about__list-item">Crunchy Puffs Texture          
-                </li>
+                <li class="about__list-item">Crunchy Puffs Texture </li>         
                 <li class="about__list-item">100 Calories per drink</li>
                 <li class="about__list-item">4g Plant Protein </li>
                 <li class="about__list-item">Good source of Magnesium & Vitamin B6</li>
@@ -160,7 +156,7 @@
         <h2 class="testimonials__title-name">Sarah A</h2>
         <div class="testimonials__inner">
             <div class="testimonials__comment">
-                <article class="testimonials__comment-article">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</article>
+                <q class="testimonials__comment-article">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
                 <div class="testimonials__comment-author">- from Santa Monica, CA</div>
             </div>
             <img class="testimonials__image" src="/assets/images/Testimonials/Img.png" alt="consumer" >
@@ -273,7 +269,7 @@
             </div>
         </div>
         <div class="footer__botton">
-            <p>©  2020. span All Rights Reserved.</p>
+            <p>© 2020. span All Rights Reserved.</p>
             <div class="go-top">
                 <a href="" class="go-top__link"></a>
             </div>
