--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </header>
-    <section>
+    <section class="smoothies">
         <h1 class="smoothies__title">What are these smoothies</h1>
         <article class="smoothies__decription">
             A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements. 
@@ -104,39 +104,38 @@
                 <li class="about__list-item">4g Plant Protein </li>
                 <li class="about__list-item">Good source of Magnesium & Vitamin B6</li>
                 <li class="about__list-item">No Sugar in our Savory Flavors</li>
-                <li class="about__list-item">Non-GMO, Vegan & Paleo
-                </li>
+                <li class="about__list-item">Non-GMO, Vegan & Paleo</li>
                 <li class="about__list-item">Gluten-Free & Grain-Free</li>
                 <li class="about__list-item">Corn-Free & Soy-Free</li>
             </ul>
-            <button class="about__button">About Organic Smoothie</button>
+            <button class="about__btn btn">About Organic Smoothie</button>
          </div>   
     </section>
     <section class="products">
         <figure class="products__items">
             <div class="products__item">
-                <img src="/assets/images/products/Img1.jpg" alt="Dark Chocolate Smoothie" class="products__item-image">
-                <div class="products__item-title">Dark Chocolate Smoothie</div>
+                <img class="products__item-image" src="/assets/images/products/Img1.jpg" alt="Dark Chocolate Smoothie" >
+                <h5 class="products__item-title">Dark Chocolate Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
-                <button class="products__item-button">Buy</button>
+                <button class="products__item-btn btn">Buy</button>
             </div>
             <div class="products__item">
-                <img src="/assets/images/products/Img2.jpg" alt="Vegan Lettuce Smoothie" class="products__item-image">
-                <div class="products__item-title">Vegan Lettuce Smoothie</div>
+                <img class="products__item-image" src="/assets/images/products/Img2.jpg" alt="Vegan Lettuce Smoothie" >
+                <h5 class="products__item-title">Vegan Lettuce Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
-                <button class="products__item-button">Buy</button>
+                <button class="products__item-btn btn">Buy</button>
             </div>
             <div class="products__item">
-                <img src="/assets/images/products/Img3.jpg" alt="Lemon Ginger Smoothie" class="products__item-image">
-                <div class="products__item-title">Lemon Ginger Smoothie</div>
+                <img class="products__item-image" src="/assets/images/products/Img3.jpg" alt="Lemon Ginger Smoothie" >
+                <h5 class="products__item-title">Lemon Ginger Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
-                <button class="products__item-button">Buy</button>
+                <button class="products__item-btn btn">Buy</button>
             </div>
             <div class="products__item">
-                <img src="/assets/images/products/Img4.jpg" alt="Lemon Ginger Smoothie" class="products__item-image">
-                <div class="products__item-title">Turmeric Garlic Smoothie</div>
+                <img class="products__item-image" src="/assets/images/products/Img4.jpg" alt="Lemon Ginger Smoothie" >
+                <h5 class="products__item-title">Turmeric Garlic Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
-                <button class="products__item-button">Buy</button>
+                <button class="products__item-btn btn">Buy</button>
             </div>
         </figure>
     </section>
@@ -144,20 +143,19 @@
         <article class="story__description">
             <h2 class="story__description-title">Our story</h2>
             <p class="story__description-article">As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake. </p>
-            <a href="" class="story__description-button">Who we are</a>
+            <button class="story__description-btn btn">Who we are</button>
         </article>
         <div class="story__images">
-            <img src="/assets/images/Story/Img.jpg" alt="Our ingredients">
-            <img src="/assets/images/Story/Dots.png" alt="Our ingredients">
+            <img class="story__images-item" src="/assets/images/Story/Img.jpg" alt="Our ingredients">
         </div>
     </section>
     <section class="testimonials">
         <h2 class="testimonials__title">Why clients <span>LOVE</span>us?</h2>
         <h2 class="testimonials__title-name">Sarah A</h2>
         <div class="testimonials__inner">
-            <div class="testimonials__comment">
-                <q class="testimonials__comment-article">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
-                <div class="testimonials__comment-author">- from Santa Monica, CA</div>
+            <div class="testimonials__comment comment">
+                <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
+                <div class="comment-author">- from Santa Monica, CA</div>
             </div>
             <img class="testimonials__image" src="/assets/images/Testimonials/Img.png" alt="consumer" >
         </div>
@@ -166,32 +164,32 @@
     <section class="blog">
         <h2 class="blog__title">Our blog</h2>
         <div class="blog__inner">
-            <img src="/assets/images/blog/Img.jpg" alt="" class="blog__image">
+            <img class="blog__image" src="/assets/images/blog/Img.jpg" alt="blog-img" >
             <article class="blog__description">
                 <h3 class="blog__description-title">ASAFOETIDA - THE NEXT TURMERIC?</h3>
-                <p>Jun 16, 2020</p>
-                <p>
+                <p class="blog__description-date">Jun 16, 2020</p>
+                <p class="blog__description-text">
                     If the fruit ingredients and the green vegetable ingredients are both juiced ahead of time, the mixed juice doesn't even have to be blended like a smoothie, i.e. a green juice or anything... <span>Read More</span>
                 </p>
             </article>
         </div>
     </section>
     <section class="instagram">
-        <h5 class="instagram__user">
+        <h5 class="instagram__user-name ">
             <a href="" class="instagram__user-link">ashasuperfoods</a>
         </h5>
         <figure class="instagram__image-items">
             <div class="instagram__image-item">
-                <img src="/assets/images/Instagram/Img1.jpg" alt="instagram__image" class="instagram__image">
-                <img src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" class="instagram__image-icon">
+                <img class="instagram__image" src="/assets/images/Instagram/Img1.jpg" alt="instagram__image" >
+                <img class="instagram__image-icon" src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" >
             </div>
             <div class="instagram__image-item">
-                <img src="/assets/images/Instagram/Img2.jpg" alt="instagram__image" class="instagram__image">
-                <img src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" class="instagram__image-icon">
+                <img class="instagram__image" src="/assets/images/Instagram/Img2.jpg" alt="instagram__image" >
+                <img class="instagram__image-icon" src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" >
             </div>
             <div class="instagram__image-item">
-                <img src="/assets/images/Instagram/Img3.jpg" alt="instagram__image" class="instagram__image">
-                <img src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" class="instagram__image-icon">
+                <img class="instagram__image" src="/assets/images/Instagram/Img3.jpg" alt="instagram__image" >
+                <img class="instagram__image-icon" src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" >
             </div>
             <div class="instagram__image-item">
                 <img src="/assets/images/Instagram/Img4.jpg" alt="instagram__image" class="instagram__image">
@@ -203,75 +201,74 @@
         <div class="footer-top">
             <div class="logo">
                 <a href="" class="logo__link">
-                    <img src="/assets/images/logo/Logo.png" alt="logo-image" class="logo__link-image">
+                    <img class="logo__link-image" src="/assets/images/logo/Logo.png" alt="logo-image" >
                 </a>
             </div>
             <nav class="information">
                 <h4 class="information__title">Information</h4>
                     <ul class="information__list">
                         <li class="linformation__list-item">
-                            <a href="" class="linformation__list-link">Search</a>
+                            <a class="linformation__list-link" href="" >Search</a>
                         </li>
                         <li class="linformation__list-item">
-                            <a href="" class="linformation__list-link">Contact us</a>
+                            <a class="linformation__list-link" href="" >Contact us</a>
                         </li>
                         <li class="linformation__list-item">
-                            <a href="" class="linformation__list-link">Terms & Conditions</a>
+                            <a class="linformation__list-link" href="" >Terms & Conditions</a>
                         </li>
                         <li class="linformation__list-item">
-                            <a href="" class="linformation__list-link">Privac/Policy</a>
+                            <a class="linformation__list-link" href="" >Privac/Policy</a>
                         </li>
                     </ul>
             </nav>
             <nav class="payment">
                 <h4 class="payment__title">Payment</h4>
-                <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/AMEX.png" alt="AMEX" class="payment__image">
+                <a class="payment__link" href="" >
+                    <img class="payment__image" src="/assets/images/Payment/AMEX.png" alt="AMEX-logo" >
+                </a>
+                <a class="payment__link" href="" >
+                    <img class="payment__image" src="/assets/images/Payment/Apple Pay.png" alt="Apple-pay-logo" >
                 </a>
                 <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/Apple Pay.png" alt="Apple-pay" class="payment__image">
+                    <img class="payment__image" src="/assets/images/Payment/Maestro.png" alt="Maestro-logo" >
                 </a>
-                <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/Maestro.png" alt="Maestro" class="payment__image">
+                <a class="payment__link" href="" >
+                    <img class="payment__image" src="/assets/images/Payment/Discover.png" alt="Discover-logo" >
                 </a>
-                <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/Discover.png" alt="Discover" class="payment__image">
+                <a class="payment__link" href="" >
+                    <img class="payment__image" src="/assets/images/Payment/JCB.png" alt="JCB-logo" >
                 </a>
-                <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/JCB.png" alt="JCB" class="payment__image">
+                <a class="payment__link" href="" >
+                    <img class="payment__image" src="/assets/images/Payment/Mastercard.png" alt="Mastercard-logo" >
                 </a>
-                <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/Mastercard.png" alt="" class="payment__image">
+                <a class="payment__link" href="" >
+                    <img class="payment__image" src="/assets/images/Payment/Paypal.png" alt="Paypal-logo" >
                 </a>
-                <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/Paypal.png" alt="Paypal" class="payment__image">
+                <a class="payment__link" href="" >
+                    <img class="payment__image" src="/assets/images/Payment/Shopify Pay.png" alt="Shopify-logo " >
                 </a>
-                <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/Shopify Pay.png" alt="Shopify " class="payment__image">
-                </a>
-                <a href="" class="payment__link">
-                    <img src="/assets/images/Payment/Visa.png" alt="Visa" class="payment__image">
+                <a class="payment__link" href="" >
+                    <img class="payment__image" src="/assets/images/Payment/Visa.png" alt="Visa-logo" >
                 </a>
             </nav>
-            <div class="subscribe">
-                <h4 class="subscribe__title">Don't miss out!</h4>
-                <input type="mail" placeholder="Subscribe to our newsletter">
+            <div class="subscription">
+                <h4 class="subscription__title">Don't miss out!</h4>
+                <input class="subscription__input" type="mail" placeholder="subscribe to our newsletter">
                 <div class="social">
                     <h5 class="social__title">FOLLOW US</h5>
-                    <ul>
-                        <li><a href=""><img src="/assets/images/social/Facebook-icon.png" alt="Facebook-icon"></a></li>
-                        <li><a href=""><img src="/assets/images/social/Pinterest-icon.png" alt="Pinterest-icon"></a></li>
-                        <li><a href=""><img src="/assets/images/social/Instagram-icon.png" alt="sInstagram></a></li>
+                    <ul class="social__list">
+                        <li class="social__list-item"><a class="social__list-link" href=""><img class="social__list-img"  src="/assets/images/social/Facebook-icon.png" alt="Facebook-icon"></a></li>
+                        <li class="social__list-item"><a class="social__list-link"  href=""><img class="social__list-img" src="/assets/images/social/Pinterest-icon.png" alt="Pinterest-icon"></a></li>
+                        <li class="social__list-item"><a class="social__list-link"  href=""><img class="social__list-img" src="/assets/images/social/Instagram-icon.png" alt="sInstagram></a></li>
                     </ul>
                 </div>
                 </div>
-
             </div>
         </div>
         <div class="footer__botton">
-            <p>© 2020. span All Rights Reserved.</p>
-            <div class="go-top">
-                <a href="" class="go-top__link"></a>
+            <p class="footer__botton-text">© 2020. span All Rights Reserved.</p>
+            <div class="hug">
+                <a href="" class="hug__link"></a>
             </div>
         </div>
     </footer>
