--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                 </div>
                 <div class="personal">
                     <ul class="personal__list">
-                        <li class="personal__list-item"><a class="personal__list-link" href=""><img src="/assets/images/personal/Search-icon.png" alt="Search-icon"></a></li>
-                        <li class="personal__list-item"><a class="personal__list-link" href=""><img src="/assets/images/personal/User-icon.png" alt="User-icon"></a></li>
-                        <li class="personal__list-item"><a class="personal__list-link" href=""> <img src="/assets//images/personal/Cart-icon.png" alt="Cart-icon"></a></li>
+                        <li class="personal__list-item"><a class="personal__list-link" href=""><img class="personal__list-img"  src="/assets/images/personal/Search-icon.png" alt="Search-icon"></a></li>
+                        <li class="personal__list-item"><a class="personal__list-link" href=""><img class="personal__list-img"  src="/assets/images/personal/User-icon.png" alt="User-icon"></a></li>
+                        <li class="personal__list-item"><a class="personal__list-link" href=""> <img class="personal__list-img"  src="/assets//images/personal/Cart-icon.png" alt="Cart-icon"></a></li>
                     </ul>
                 </div>
                 <div class="social">
                     <ul class="social__list">
-                        <li class="social__list-item"><a class="social__list-link" href=""><img src="/assets/images/social/Instagram-icon.png" alt="Instagram-icon"></a></li>
-                        <li class="social__list-item"><a class="social__list-link" href=""><img src="/assets/images/social/Pinterest-icon.png" alt="Pinterest-icon"></a></li>
-                        <li class="social__list-item"><a class="social__list-link" href=""><img src="/assets/images/social/Facebook-icon.png" alt="Facebook-icon"></a></li>
+                        <li class="social__list-item"><a class="social__list-link" href=""><img class="social__list-img" src="/assets/images/social/Instagram-icon.png" alt="Instagram-icon"></a></li>
+                        <li class="social__list-item"><a class="social__list-link" href=""><img class="social__list-img" src="/assets/images/social/Pinterest-icon.png" alt="Pinterest-icon"></a></li>
+                        <li class="social__list-item"><a class="social__list-link" href=""><img class="social__list-img" src="/assets/images/social/Facebook-icon.png" alt="Facebook-icon"></a></li>
                     </ul>
                 </div>
             </div>
@@ -197,7 +197,7 @@
             </div>
         </figure>
     </section>
-    <footer>
+    <footer class="footer">
         <div class="footer-top">
             <div class="logo">
                 <a href="" class="logo__link">
@@ -273,5 +273,4 @@
         </div>
     </footer>
 </body>
-
 </html
