styles for block Smoothies

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </ul>
                 </nav>
                 <div class="logo">
-                    <a href="" class="logo__link">
+                    <a class="logo__link" href="" >
                         <img class="logo__img" src="/assets/images/logo/Logo.png" alt="logo-image">
                     </a>
                 </div>
@@ -192,8 +192,8 @@
                 <img class="instagram__image-icon" src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" >
             </div>
             <div class="instagram__image-item">
-                <img src="/assets/images/Instagram/Img4.jpg" alt="instagram__image" class="instagram__image">
-                <img src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" class="instagram__image-icon">
+                <img class="instagram__image" src="/assets/images/Instagram/Img4.jpg" alt="instagram__image" >
+                <img class="instagram__image-icon" src="/assets/images/social/Instagram-icon.png" alt="instagram__image-icon" >
             </div>
         </figure>
     </section>
