styles for block about

--- a/index.html
+++ b/index.html
@@ -93,23 +93,25 @@
         </div>
     </section>
     <section class="about">
-         <div class="about__image">
-             <img class="about__image-item" src="/assets/images/About/Img.png" alt="Smoothie">
-         </div>
-         <div class="about__description">
-            <h2 class="about__title">What makes Smoothie an awesome drink? </h2>
-            <ul class="about__list">
-                <li class="about__list-item">Crunchy Puffs Texture </li>         
-                <li class="about__list-item">100 Calories per drink</li>
-                <li class="about__list-item">4g Plant Protein </li>
-                <li class="about__list-item">Good source of Magnesium & Vitamin B6</li>
-                <li class="about__list-item">No Sugar in our Savory Flavors</li>
-                <li class="about__list-item">Non-GMO, Vegan & Paleo</li>
-                <li class="about__list-item">Gluten-Free & Grain-Free</li>
-                <li class="about__list-item">Corn-Free & Soy-Free</li>
-            </ul>
-            <button class="about__btn btn">About Organic Smoothie</button>
-         </div>   
+        <div class="about__inner">
+            <div class="about__image">
+                <img class="about__image-item" src="/assets/images/About/Img.png" alt="Smoothie">
+            </div>
+            <div class="about__description">
+                <h2 class="about__title">What makes Smoothie <span class="about__description-mark">an awesome drink?</span>  </h2>
+                <ul class="about__list">
+                    <li class="about__list-item">Crunchy Puffs Texture </li>         
+                    <li class="about__list-item">100 Calories per drink</li>
+                    <li class="about__list-item">4g Plant Protein </li>
+                    <li class="about__list-item">Good source of Magnesium & Vitamin B6</li>
+                    <li class="about__list-item">No Sugar in our Savory Flavors</li>
+                    <li class="about__list-item">Non-GMO, Vegan & Paleo</li>
+                    <li class="about__list-item">Gluten-Free & Grain-Free</li>
+                    <li class="about__list-item">Corn-Free & Soy-Free</li>
+                </ul>
+                <button class="about__btn btn">About Organic Smoothie</button>
+            </div>
+        </div>   
     </section>
     <section class="products">
         <figure class="products__items">
