corrected block Header

--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 <body>
     <!-- Здесь будет структура документа -->
     <header class="header">
-        <div class="conteiner">
-            <div class="header__top">
-                <nav class="header__nav menu">
-                    <ul class="menu__list">
-                        <li class="menu__list-item"><a class="menu__list-link" href="">HOME</a></li>
-                        <li class="menu__list-item"><a class="menu__list-link" href="">SHOP</a></li>
-                        <li class="menu__list-item"><a class="menu__list-link" href="">STORY</a></li>
-                        <li class="menu__list-item"><a class="menu__list-link" href="">ABOUT</a></li>
-                        <li class="menu__list-item"><a class="menu__list-link" href="">BLOG</a></li>
-                        <li class="menu__list-item"><a class="menu__list-link" href="">TESTIMONIALS</a></li>
-                    </ul>
-                </nav>
-                <div class="logo">
-                    <a class="logo__link" href="" >
-                        <img class="logo__img" src="/assets/images/logo/logo.png" alt="logo-image">
-                    </a>
-                </div>
+        <div class="header__top">
+            <nav class="header__nav menu">
+                <ul class="menu__list">
+                    <li class="menu__list-item"><a class="menu__list-link" href="">HOME</a></li>
+                    <li class="menu__list-item"><a class="menu__list-link" href="">SHOP</a></li>
+                    <li class="menu__list-item"><a class="menu__list-link" href="">STORY</a></li>
+                    <li class="menu__list-item"><a class="menu__list-link" href="">ABOUT</a></li>
+                    <li class="menu__list-item"><a class="menu__list-link" href="">BLOG</a></li>
+                    <li class="menu__list-item"><a class="menu__list-link" href="">TESTIMONIALS</a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <a class="logo__link" href="" >
+                    <img class="logo__img" src="/assets/images/logo/logo.png" alt="logo-image">
+                </a>
+            </div>
+            <div class="header__right-block">
                 <div class="personal">
                     <ul class="personal__list">
                         <li class="personal__list-item"><a class="personal__list-link" href=""><img class="personal__list-img"  src="/assets/images/personal/search-icon.png" alt="Search-icon"></a></li>
                         <li class="personal__list-item"><a class="personal__list-link" href=""><img class="personal__list-img"  src="/assets/images/personal/user.png" alt="User-icon"></a></li>
-                        <li class="personal__list-item"><a class="personal__list-link" href=""> <img class="personal__list-img"  src="/assets//images/personal/cart-icon.png" alt="Cart-icon"></a></li>
+                        <li class="personal__list-item"><a class="personal__list-link personal__list-number" href=""> <img class="personal__list-img"  src="/assets//images/personal/cart-icon.png" alt="Cart-icon"></a></li>
                     </ul>
                 </div>
                 <div class="social">
@@ -45,11 +45,13 @@
                     </ul>
                 </div>
             </div>
-            <div class="header__content">
-                <button class="header__btn btn">Shop Now</button>
-            </div>
         </div>
+        <div class="header__content">
+            <button class="header__btn btn">Shop Now</button>
+        </div>
+        
     </header>
+
     <section class="smoothies">
         <h1 class="smoothies__title">What are these smoothies</h1>
         <p class="smoothies__decription">
